(0.49.D003) Add backup files to symlink exceptions

--- a/aegis.conf
+++ b/aegis.conf
@@ -2,7 +2,8 @@ build_command = "test Makefile -nt Makefile.PL || perl Makefile.PL; make";
 build_covers_all_architectures = true;
 
 batch_test_command = 
-    "HARNESS_NOTTY=1 perl -Mblib t/runtests ${File_Names} --aegis_output ${Output} 2>&1";
+    "echo ${Search_Path_Executable} > /dev/null;"
+    "perl -Mblib t/runtests ${File_Names} --aegis_output ${Output} 2>&1";
 test_command = 
     "perl -MTest::Harness -Mblib -we 'runtests @ARGV' ${File_Name}";
 
@@ -10,8 +11,8 @@ link_integration_directory = false;
 create_symlinks_before_build = true;
 remove_symlinks_after_integration_build = false;
 
-symlink_exceptions = [ "*,*", "pm_to_blib", "blib/*", "_build/*", "Build", "Makefile", "Makefile.old" ];
-integrate_begin_exceptions = [ "pm_to_blib", "blib/*", "_build/*", "Build", "Makefile", "Makefile.old" ];
+symlink_exceptions = [ "*,*", "pm_to_blib", "blib/*", "_build/*", "Build", "Makefile", "Makefile.old", "*~" ];
+integrate_begin_exceptions = [ "pm_to_blib", "blib/*", "_build/*", "Build", "Makefile", "Makefile.old", "*~" ];
 
 history_create_command = 
         "ci -u -d -M -m${quote ($version) ${change description}} -t/dev/null \
