(0.49.D004) Add file templates

--- a/aegis.conf
+++ b/aegis.conf
@@ -38,3 +38,22 @@ dos_filename_required = false;
 windows_filename_required = false;
 shell_safe_filenames = false;
 build_time_adjust = adjust_and_sleep;
+
+file_template = [
+    {
+        pattern = ["*.pm"];
+        body_command = 
+            "cp /var/local/aegis/skel/perl/Module.pm $filename";
+    },
+    {
+        pattern = ["*.t"];
+        body_command = "cp /var/local/aegis/skel/perl/core_test.t $filename";
+    },
+    {
+        pattern = ["Makefile.PL"];
+        body_command = "cp /var/local/aegis/skel/perl/Makefile.PL $filename";
+    },
+    {   pattern = ["Build.PL"];
+        body_command = "cp /var/local/aegis/skel/perl/Build.PL    $filename";
+    }
+];
