Clean up some more perlcritic level 4 stuff.
Qualify all the "no warnings".  "with_at_least_one" is a special patch of mine
which won't hurt anyone else.
http://rt.cpan.org/Ticket/Display.html?id=38514

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -14,3 +14,6 @@ pager           = $PAGER
 # Extend the ability to play with @_ to 3 line subroutines.
 [Subroutines::RequireArgUnpacking]
 short_subroutine_statements = 3
+
+[TestingAndDebugging::ProhibitNoWarnings]
+allow = exiting uninitialized with_at_least_one
