Fix up some more easy critics.
Tell perlcritic that we don't use Carp.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -11,6 +11,9 @@ pager           = $PAGER
 [-BuiltinFunctions::RequireBlockMap]
 [-BuiltinFunctions::RequireBlockGrep]
 
+# Can't use Carp
+[-ErrorHandling::RequireCarping]
+
 # Extend the ability to play with @_ to 3 line subroutines.
 [Subroutines::RequireArgUnpacking]
 short_subroutine_statements = 3
