--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -1,3 +1,7 @@
+###
+### Configure perlcritic display behavior.
+###
+
 # Change the default message to show the policy name so we can shut it up if necessary
 verbose         = %m [%p] at %f line %l, near '%r'\n
 
@@ -6,6 +10,11 @@ color           = 1
 
 # Use a pager.
 pager           = $PAGER
+
+
+###
+### Turn off policies.
+###
 
 # Nuthin wrong with the expression form of map and grep.
 [-BuiltinFunctions::RequireBlockMap]
@@ -18,9 +27,45 @@ pager           = $PAGER
 # thanks.
 [-Variables::RequireInitializationForLocalVars]
 
+# I'd rather use a few unnecessary "" then forget to interpolate.
+[-ValuesAndExpressions::ProhibitInterpolationOfLiterals]
+
+# Inline POD is more worthwhile than the dubious optimization of putting it
+# after the __END__ block
+[-Documentation::RequirePodAtEnd]
+
+# No, we're not going to use English.
+[-Variables::ProhibitPunctuationVars]
+
+# That's just rediculous
+[-ControlStructures::ProhibitPostfixControls]
+[-ValuesAndExpressions::ProhibitEmptyQuotes]
+[-ValuesAndExpressions::ProhibitNoisyQuotes]
+
+# Test::Builder makes heavy use of local()
+[-Variables::ProhibitLocalVars]
+
+# Nuthin wrong with @$foo
+[-References::ProhibitDoubleSigils]
+
+
+###
+### Configure policies
+###
+
 # Extend the ability to play with @_ to 3 line subroutines.
 [Subroutines::RequireArgUnpacking]
 short_subroutine_statements = 3
 
-[TestingAndDebugging::ProhibitNoWarnings]
-allow = exiting uninitialized with_at_least_one
+
+###
+### New policies and options which are not released yet.
+###
+
+# "no warnings" is fine as long as it's restricted to one or more categories
+#[TestingAndDebugging::ProhibitNoWarnings]
+#allow_with_category_restriction = 1
+
+# Don't need /x on small regexes.
+#[RegularExpressions::RequireExtendedFormatting]
+#minimum_regex_length_to_complain_about = 12
