--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -57,15 +57,19 @@ pager           = $PAGER
 [Subroutines::RequireArgUnpacking]
 short_subroutine_statements = 3
 
+# No tabs ever
+[CodeLayout::ProhibitHardTabs]
+allow_leading_tabs = 0
+
 
 ###
 ### New policies and options which are not released yet.
 ###
 
 # "no warnings" is fine as long as it's restricted to one or more categories
-#[TestingAndDebugging::ProhibitNoWarnings]
-#allow_with_category_restriction = 1
+[TestingAndDebugging::ProhibitNoWarnings]
+allow_with_category_restriction = 1
 
 # Don't need /x on small regexes.
-#[RegularExpressions::RequireExtendedFormatting]
-#minimum_regex_length_to_complain_about = 12
+[RegularExpressions::RequireExtendedFormatting]
+minimum_regex_length_to_complain_about = 12
