add extra testing prereq

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,4 @@ perl:
 before_install:
   - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
   - source ~/travis-perl-helpers/init --auto
+  - cpan-install SQL::Abstract::Test
