--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,9 @@ perl:
   - "5.16"
   - "5.18"
   - "5.20-thr"
+  - "5.22-thr"
   - "blead"
 before_install:
   - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
   - source ~/travis-perl-helpers/init --auto
-  - cpan-install SQL::Abstract::Test
+  - cpan-install Test::Stream
