min perl version

--- a/dist.ini
+++ b/dist.ini
@@ -29,6 +29,7 @@ repository.url  = http://github.com/Test-More/Test-Stream/
 repository.type = git
 
 [Prereqs]
+perl = 5.008001
 Carp = 0
 Scalar::Util  = 1.13
 Test::Harness = 2.03
