--- a/dist.ini
+++ b/dist.ini
@@ -35,7 +35,7 @@ Scalar::Util  = 1.13
 Test::Harness = 2.03
 
 [Prereqs / RuntimeSuggests]
-Test::Stream::XS = 1.302004
+;Test::Stream::XS = 1.302004 ;Not Yet
 
 [MakeMaker]
 [CPANFile]
