Documentation and test updates
Major audit of tests + docs an dmaking sure they are in sync

This is part 1, others may come, not everything is tested/documented yet

--- a/dist.ini
+++ b/dist.ini
@@ -36,6 +36,8 @@ Test::Harness = 2.03
 
 [Prereqs / RuntimeSuggests]
 Term::ReadKey = 2.03
+Unicode::GCString = 2013.10
+Unicode::LineBreak = 2015.07.16
 
 [MakeMaker]
 [CPANFile]
