--- a/dist.ini
+++ b/dist.ini
@@ -28,12 +28,22 @@ bugtracker.web  = http://github.com/Test-More/Test-Stream/issues
 repository.url  = http://github.com/Test-More/Test-Stream/
 repository.type = git
 
+; Most of these version numbers are taken from perl 5.8.1's core versions
 [Prereqs]
-perl = 5.008001
-Carp = 0
+perl          = 5.008001
+B             = 1.02
+Carp          = 1.36
+File::Spec    = 3.47
+File::Temp    = 0.22
+List::Util    = 1.13
+PerlIO        = 1.02
 Scalar::Util  = 1.13
+Storable      = 2.08
 Test::Harness = 2.03
+overload      = 1.01
+utf8          = 1.02
 
+; These version numbers have been checked to matter.
 [Prereqs / RuntimeSuggests]
 Term::ReadKey = 2.03
 Unicode::GCString = 2013.10
