Add some sub utils to Util.pm

--- a/dist.ini
+++ b/dist.ini
@@ -45,6 +45,8 @@ utf8          = 1.02
 
 ; These version numbers have been checked to matter.
 [Prereqs / RuntimeSuggests]
+Sub::Name = 0.11
+Sub::Util = 1.40
 Term::ReadKey = 2.03
 Unicode::GCString = 2013.10
 Unicode::LineBreak = 2015.07.16
