--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-name    = Test-Stream
+name    = Test2
 author  = Chad Granum <exodist@cpan.org>
 license = Perl_5
 copyright_holder = Chad Granum
@@ -22,6 +22,8 @@ package   = Test::Simple
 namespace = Test::Simple
 package   = Test::Tester
 namespace = Test::Tester
+package   = Test::Stream
+namespace = Test::Stream
 
 [MetaResources]
 bugtracker.web  = http://github.com/Test-More/Test-Stream/issues
@@ -31,8 +33,6 @@ repository.type = git
 ; Most of these version numbers are taken from perl 5.8.1's core versions
 [Prereqs]
 perl          = 5.008001
-B             = 0
-overload      = 0
 utf8          = 0
 Carp          = 0
 File::Spec    = 0
@@ -42,15 +42,6 @@ PerlIO        = 0
 Scalar::Util  = 0
 Storable      = 0
 Test::Harness = 0
-
-; These version numbers have been checked to matter.
-[Prereqs / RuntimeSuggests]
-Sub::Name = 0.11
-Sub::Util = 1.40
-Term::ReadKey = 2.03
-Unicode::GCString = 2013.10
-Unicode::LineBreak = 2015.07.16
-Trace::Mask = 0.000005
 
 [MakeMaker]
 [CPANFile]
