Update repo info

--- a/dist.ini
+++ b/dist.ini
@@ -26,8 +26,8 @@ package   = Test::Stream
 namespace = Test::Stream
 
 [MetaResources]
-bugtracker.web  = http://github.com/Test-More/Test-Stream/issues
-repository.url  = http://github.com/Test-More/Test-Stream/
+bugtracker.web  = http://github.com/Test-More/Test2/issues
+repository.url  = http://github.com/Test-More/Test2/
 repository.type = git
 
 ; Most of these version numbers are taken from perl 5.8.1's core versions
