--- a/dist.ini
+++ b/dist.ini
@@ -19,13 +19,22 @@ repository.url  = http://github.com/Test-More/Test2-Workflow/
 repository.type = git
 
 [Prereqs]
-perl          = 5.008001
-Test2         = 0.000021
-Test2::Suite  = 0.000018
-B             = 0
-Carp          = 0
-Scalar::Util  = 0
-overload      = 0
+perl         = 5.008001
+Test2        = 0.000025
+Test2::Suite = 0.000019
+Scope::Guard = 0.10
+B            = 0
+Carp         = 0
+POSIX        = 0
+Scalar::Util = 0
+Time::HiRes  = 0
+overload     = 0
+parent       = 0
+
+[Prereqs / RuntimeSuggests]
+Trace::Mask = 0.000006
+Sub::Name   = 0.11
+Sub::Util   = 1.40
 
 [MakeMaker]
 [CPANFile]
