Add spec bundle

--- a/dist.ini
+++ b/dist.ini
@@ -22,6 +22,7 @@ repository.type = git
 perl         = 5.008001
 Test2        = 0.000025
 Test2::Suite = 0.000019
+Import::Into = 1.002000
 Scope::Guard = 0.10
 B            = 0
 Carp         = 0
