--- a/dist.ini
+++ b/dist.ini
@@ -28,6 +28,22 @@ PerlIO        = 0
 Scalar::Util  = 1.13
 Storable      = 0
 
+[Breaks]
+Test::Exception         = <= 0.43
+Test::Builder::Clutch   = <= 0.07
+Test::Dist::VersionSync = <= 1.1.4
+Test::Modern            = <= 0.012
+Test::SharedFork        = <= 0.35
+Net::BitTorrent         = <= 0.052
+Test::Aggregate         = <= 0.373
+Test::Flatten           = <= 0.11
+Test::Group             = <= 0.20
+Test::More::Prefix      = <= 0.005
+Test::ParallelSubtest   = <= 0.05
+Test::Pretty            = <= 0.32
+Test::Wrapper           = <= 0.3.0
+
+
 [MakeMaker::Awesome]
 WriteMakefile_arg = INSTALLDIRS => ($] >= 5.006002 && $] < 5.012000) ? 'perl' : 'site'
 [CPANFile]
