Add Test::Clustericious::Cluster to breakages

--- a/dist.ini
+++ b/dist.ini
@@ -42,6 +42,7 @@ Test::More::Prefix      = <= 0.005
 Test::ParallelSubtest   = <= 0.05
 Test::Pretty            = <= 0.32
 Test::Wrapper           = <= 0.3.0
+Test::Clustericious::Cluster = < 0.31
 
 
 [MakeMaker::Awesome]
