--- a/dist.ini
+++ b/dist.ini
@@ -29,21 +29,25 @@ Scalar::Util  = 1.13
 Storable      = 0
 
 [Breaks]
-Test::Exception         = <= 0.43
-Test::Builder::Clutch   = <= 0.07
-Test::Dist::VersionSync = <= 1.1.4
-Test::Modern            = <= 0.012
-Test::SharedFork        = <= 0.35
-Net::BitTorrent         = <= 0.052
-Test::Aggregate         = <= 0.373
-Test::Flatten           = <= 0.11
-Test::Group             = <= 0.20
-Test::More::Prefix      = <= 0.005
-Test::ParallelSubtest   = <= 0.05
-Test::Pretty            = <= 0.32
-Test::Wrapper           = <= 0.3.0
-Test::Clustericious::Cluster = < 0.31
-
+Net::BitTorrent              = <= 0.052
+Test::Aggregate              = <= 0.373
+Test::Builder::Clutch        = <= 0.07
+Test::Clustericious::Cluster = <= 0.31
+Test::Dist::VersionSync      = <= 1.1.4
+Test::Exception              = <= 0.42
+Test::Flatten                = <= 0.11
+Test::Group                  = <= 0.20
+Test::Modern                 = <= 0.012
+Test::More::Prefix           = <= 0.005
+Test::ParallelSubtest        = <= 0.05
+Test::Pretty                 = <= 0.32
+Test::SharedFork             = <= 0.35
+Test::Wrapper                = <= 0.3.0
+# These have tests that will not pass on old versions, but do not break if
+# already installed, no need to notify.
+# Test::FITesque
+# Test::Module::Used
+# Test::Moose::More
 
 [MakeMaker::Awesome]
 WriteMakefile_arg = INSTALLDIRS => ($] >= 5.006002 && $] < 5.012000) ? 'perl' : 'site'
