Fix comments in dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -43,11 +43,11 @@ Test::ParallelSubtest        = <= 0.05
 Test::Pretty                 = <= 0.32
 Test::SharedFork             = <= 0.35
 Test::Wrapper                = <= 0.3.0
-# These have tests that will not pass on old versions, but do not break if
-# already installed, no need to notify.
-# Test::FITesque
-# Test::Module::Used
-# Test::Moose::More
+; These have tests that will not pass on old versions, but do not break if
+; already installed, no need to notify.
+; Test::FITesque
+; Test::Module::Used
+; Test::Moose::More
 
 [MakeMaker::Awesome]
 WriteMakefile_arg = INSTALLDIRS => ($] >= 5.006002 && $] < 5.012000) ? 'perl' : 'site'
