Add Test-Able and Log::Dispatch::Config::TestLog to breakages
Fixes #652
Fixes #651

--- a/dist.ini
+++ b/dist.ini
@@ -29,20 +29,22 @@ Scalar::Util  = 1.13
 Storable      = 0
 
 [Breaks]
-Net::BitTorrent              = <= 0.052
-Test::Aggregate              = <= 0.373
-Test::Builder::Clutch        = <= 0.07
-Test::Clustericious::Cluster = <= 0.30
-Test::Dist::VersionSync      = <= 1.1.4
-Test::Exception              = <= 0.42
-Test::Flatten                = <= 0.11
-Test::Group                  = <= 0.20
-Test::Modern                 = <= 0.012
-Test::More::Prefix           = <= 0.005
-Test::ParallelSubtest        = <= 0.05
-Test::Pretty                 = <= 0.32
-Test::SharedFork             = <= 0.35
-Test::Wrapper                = <= 0.3.0
+Log::Dispatch::Config::TestLog = <= 0.02
+Net::BitTorrent                = <= 0.052
+Test::Able                     = <= 0.11
+Test::Aggregate                = <= 0.373
+Test::Builder::Clutch          = <= 0.07
+Test::Clustericious::Cluster   = <= 0.30
+Test::Dist::VersionSync        = <= 1.1.4
+Test::Exception                = <= 0.42
+Test::Flatten                  = <= 0.11
+Test::Group                    = <= 0.20
+Test::Modern                   = <= 0.012
+Test::More::Prefix             = <= 0.005
+Test::ParallelSubtest          = <= 0.05
+Test::Pretty                   = <= 0.32
+Test::SharedFork               = <= 0.35
+Test::Wrapper                  = <= 0.3.0
 ; These have tests that will not pass on old versions, but do not break if
 ; already installed, no need to notify.
 ; Test::FITesque
