make xt/ tests work, and run them in "test" and "release" commands

--- a/dist.ini
+++ b/dist.ini
@@ -9,8 +9,10 @@ copyright_holder = Chad Granum
 [Manifest]
 [NextRelease]
 [GatherDir]
+exclude_match = ^xt/downstream      ; only run these tests locally
 
 [PodSyntaxTests]
+[RunExtraTests]
 [TestRelease]
 
 [MetaResources]
