--- a/dist.ini
+++ b/dist.ini
@@ -30,6 +30,9 @@ PerlIO        = 0
 Scalar::Util  = 1.13
 Storable      = 0
 
+[Prereqs / DevelopRequires]
+Test::Spelling = 0.12   ; for xt/author/pod-spell.t
+
 [Breaks]
 Log::Dispatch::Config::TestLog = <= 0.02
 Net::BitTorrent                = <= 0.052
