--- a/dist.ini
+++ b/dist.ini
@@ -22,19 +22,15 @@ repository.type = git
 perl         = 5.008001
 Test2        = 0.000041
 Test2::Suite = 0.000027
-Import::Into = 1.002000
-Scope::Guard = 0.10
-B            = 0
+Importer     = 0.012
 Carp         = 0
-POSIX        = 0
 Scalar::Util = 0
 Time::HiRes  = 0
 overload     = 0
-parent       = 0
+Exporter     = 0
 
 [Prereqs / RuntimeSuggests]
 Sub::Name   = 0.11
-Sub::Util   = 1.40
 
 [MakeMaker]
 [CPANFile]
