Remove Carp from deps
Fixes #682

--- a/dist.ini
+++ b/dist.ini
@@ -23,12 +23,12 @@ repository.type = git
 [Prereqs]
 perl          = 5.008001
 utf8          = 0
-Carp          = 0
 File::Spec    = 0
 File::Temp    = 0
 PerlIO        = 0
 Scalar::Util  = 1.13
 Storable      = 0
+; Carp          = 0 ; Do not uncomment this, causes cycle in really old perls (#682)
 
 [Prereqs / DevelopRequires]
 Test::Spelling = 0.12   ; for xt/author/pod-spell.t
