Declare breakage of Test::UseAllModules >= 0.12, <= 0.14 (GH #685)

--- a/dist.ini
+++ b/dist.ini
@@ -50,6 +50,7 @@ Test::More::Prefix             = <= 0.005
 Test::ParallelSubtest          = <= 0.05
 Test::Pretty                   = <= 0.32
 Test::SharedFork               = <= 0.34
+Test::UseAllModules            = >= 0.12, <= 0.14
 Test::Wrapper                  = <= 0.3.0
 ; These have tests that will not pass on old versions, but do not break if
 ; already installed, no need to notify.
