--- a/dist.ini
+++ b/dist.ini
@@ -21,6 +21,7 @@ repository.type = git
 [Prereqs]
 perl          = 5.008001
 Test2         = 1.302032
+Importer      = 0.010
 B             = 0
 Carp          = 0
 List::Util    = 0
