simplify Makefile.PL generation by falling back to core [MakeMaker]

--- a/dist.ini
+++ b/dist.ini
@@ -59,8 +59,9 @@ Test::Wrapper                  = <= 0.3.0
 ; Test::Moose::More
 ; Device::Chip
 
-[MakeMaker::Awesome]
-WriteMakefile_arg = INSTALLDIRS => ($] >= 5.006002 && $] < 5.012000) ? 'perl' : 'site'
+[MakeMaker]
+[DualLife]
+
 [CPANFile]
 [MetaYAML]
 [MetaJSON]
