--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,5 @@ perl:
 before_install:
   - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
   - source ~/travis-perl-helpers/init --auto
+notifications:
+  slack: perl-test2:kI7LQjG4iRjIqA2JTl770A5F
