--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,5 @@ perl:
   - "blead"
 before_install:
   - eval $(curl https://travis-perl.github.io/init) --auto
+notifications:
+  slack: perl-test2:kI7LQjG4iRjIqA2JTl770A5F
