--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,3 +17,8 @@ build_script:
 test_script:
   - dzil test
 
+notifications:
+  - provider: Slack
+    auth_token:
+      secure: 1XmVVszAQyTtMdNkyWup8p7AC9iqXkMl6QMchq3Xu7L7rCzYgjjlS/mas+bfp3ouyjPKnoh01twl4eB0Xs/1Ig==
+    channel: '#general'
