--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,4 @@ before_install:
   - eval $(curl https://travis-perl.github.io/init) --auto
 notifications:
   slack: perl-test2:kI7LQjG4iRjIqA2JTl770A5F
+  on_success: change
