--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,7 @@ sudo: false
 before_install:
   - eval $(curl https://travis-perl.github.io/init) --auto
 notifications:
-  slack: perl-test2:kI7LQjG4iRjIqA2JTl770A5F
-  on_success: change
+  slack:
+    rooms:
+      - perl-test2:kI7LQjG4iRjIqA2JTl770A5F#general
+    on_success: change
