--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,7 @@ before_install:
   - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
   - source ~/travis-perl-helpers/init --auto
 notifications:
-  slack: perl-test2:kI7LQjG4iRjIqA2JTl770A5F
+  slack:
+    rooms:
+      - perl-test2:kI7LQjG4iRjIqA2JTl770A5F#general
+    on_success: change
