Generate some stuff automatically
This will auto-regen README files, as well as a Makefile.PL and a couple
other things.

This makes it easier for people to use the github repo.

Fixes #719

--- a/dist.ini
+++ b/dist.ini
@@ -10,6 +10,11 @@ copyright_holder = Chad Granum
 [NextRelease]
 [GatherDir]
 exclude_match = ^xt/downstream      ; only run these tests locally
+exclude_filename = LICENSE
+exclude_filename = Makefile.PL
+exclude_filename = cpanfile
+exclude_filename = README
+exclude_filename = README.md
 
 [PodSyntaxTests]
 [RunExtraTests]
@@ -65,6 +70,23 @@ Test::Wrapper                  = <= 0.3.0
 [CPANFile]
 [MetaYAML]
 [MetaJSON]
+
+[ReadmeFromPod / Markdown]
+filename = lib/Test2.pm
+type = markdown
+readme = README.md
+
+[ReadmeFromPod / Text]
+filename = lib/Test2.pm
+type = text
+readme = README
+
+[CopyFilesFromBuild]
+copy = LICENSE
+copy = Makefile.PL
+copy = cpanfile
+copy = README
+copy = README.md
 
 [Git::Check]
 [Git::Commit]
