Auto version bumping

--- a/dist.ini
+++ b/dist.ini
@@ -83,7 +83,6 @@ readme = README
 
 [CopyFilesFromBuild]
 copy = LICENSE
-copy = Makefile.PL
 copy = cpanfile
 copy = README
 copy = README.md
@@ -93,3 +92,10 @@ copy = README.md
 [Git::Tag]
 
 [FakeRelease]
+
+[BumpVersionAfterRelease]
+[Git::Commit / Commit_Changes]
+munge_makefile_pl = true
+allow_dirty_match = ^lib
+allow_dirty = Makefile.PL
+commit_msg = Automated Version Bump
