Fix problems with last dist.ini change
Lets actually record files properly

--- a/dist.ini
+++ b/dist.ini
@@ -86,16 +86,36 @@ copy = LICENSE
 copy = cpanfile
 copy = README
 copy = README.md
+copy = Makefile.PL
 
 [Git::Check]
+allow_dirty = Makefile.PL
+allow_dirty = README
+allow_dirty = README.md
+allow_dirty = cpanfile
+allow_dirty = LICENSE
+allow_dirty = Changes
+
 [Git::Commit]
+allow_dirty = Makefile.PL
+allow_dirty = README
+allow_dirty = README.md
+allow_dirty = cpanfile
+allow_dirty = LICENSE
+allow_dirty = Changes
+
 [Git::Tag]
 
 [FakeRelease]
 
 [BumpVersionAfterRelease]
+
 [Git::Commit / Commit_Changes]
 munge_makefile_pl = true
 allow_dirty_match = ^lib
 allow_dirty = Makefile.PL
+allow_dirty = README
+allow_dirty = README.md
+allow_dirty = cpanfile
+allow_dirty = LICENSE
 commit_msg = Automated Version Bump
