--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ install:
   - if not exist "C:\strawberry" cinst strawberryperl -y
   - set PATH=C:\strawberry\perl\bin;C:\strawberry\perl\site\bin;C:\strawberry\c\bin;%PATH%
   - cd C:\projects\%APPVEYOR_PROJECT_NAME%
-  - cpanm -n Dist::Zilla
+  - cpanm -n Dist::Zilla Pod::Markdown
   - dzil authordeps --missing | cpanm -n
   - dzil listdeps --author --missing | cpanm
 
