Copy files from build, autogen docs

--- a/dist.ini
+++ b/dist.ini
@@ -9,6 +9,13 @@ copyright_holder = Chad Granum
 [Manifest]
 [NextRelease]
 [GatherDir]
+exclude_match = ^xt/downstream      ; only run these tests locally
+exclude_filename = LICENSE
+exclude_filename = Makefile.PL
+exclude_filename = cpanfile
+exclude_filename = README
+exclude_filename = README.md
+
 
 [PodSyntaxTests]
 [TestRelease]
@@ -34,13 +41,51 @@ utf8          = 0
 [MetaYAML]
 [MetaJSON]
 
+[ReadmeFromPod / Markdown]
+filename = lib/Test2/Suite.pm
+type = markdown
+readme = README.md
+
+[ReadmeFromPod / Text]
+filename = lib/Test2/Suite.pm
+type = text
+readme = README
+
+[CopyFilesFromBuild]
+copy = LICENSE
+copy = cpanfile
+copy = README
+copy = README.md
+copy = Makefile.PL
+
 [Git::Check]
+allow_dirty = Makefile.PL
+allow_dirty = README
+allow_dirty = README.md
+allow_dirty = cpanfile
+allow_dirty = LICENSE
+allow_dirty = Changes
+
 [Git::Commit]
+allow_dirty = Makefile.PL
+allow_dirty = README
+allow_dirty = README.md
+allow_dirty = cpanfile
+allow_dirty = LICENSE
+allow_dirty = Changes
+
 [Git::Tag]
 
 [FakeRelease]
 
 [BumpVersionAfterRelease]
+
 [Git::Commit / Commit_Changes]
+munge_makefile_pl = true
 allow_dirty_match = ^lib
+allow_dirty = Makefile.PL
+allow_dirty = README
+allow_dirty = README.md
+allow_dirty = cpanfile
+allow_dirty = LICENSE
 commit_msg = Automated Version Bump
