Add missing authordep
This should fix travis

fixes #733

--- a/dist.ini
+++ b/dist.ini
@@ -71,6 +71,7 @@ Test::Wrapper                  = <= 0.3.0
 [MetaYAML]
 [MetaJSON]
 
+; authordep Pod::Markdown
 [ReadmeFromPod / Markdown]
 filename = lib/Test2.pm
 type = markdown
