Add missing authordep

--- a/dist.ini
+++ b/dist.ini
@@ -41,6 +41,7 @@ utf8          = 0
 [MetaYAML]
 [MetaJSON]
 
+; authordep Pod::Markdown
 [ReadmeFromPod / Markdown]
 filename = lib/Test2/Suite.pm
 type = markdown
