Test::Moose before 2.1210 calls $tb->history for versions > 1.5
This was part of the interface of the old TB 1.5, before the new reformation.
e.g. see
http://www.cpantesters.org/cpan/report/9f718738-98c2-11e6-886b-73ce95f05882

--- a/dist.ini
+++ b/dist.ini
@@ -51,6 +51,7 @@ Test::Exception                = <= 0.42
 Test::Flatten                  = <= 0.11
 Test::Group                    = <= 0.20
 Test::Modern                   = <= 0.012
+Test::Moose                    = <= 2.1209
 Test::More::Prefix             = <= 0.005
 Test::ParallelSubtest          = <= 0.05
 Test::Pretty                   = <= 0.32
