--- a/dist.ini
+++ b/dist.ini
@@ -29,6 +29,7 @@ repository.type = git
 perl          = 5.008001
 Test2         = 1.302032
 Importer      = 0.024
+Term::Table   = 0.001
 B             = 0
 Carp          = 0
 List::Util    = 0
