Move sub_info to Sub::Info

--- a/dist.ini
+++ b/dist.ini
@@ -30,6 +30,7 @@ perl          = 5.008001
 Test2         = 1.302073
 Importer      = 0.024
 Term::Table   = 0.002
+Sub::Info     = 0.001
 B             = 0
 Carp          = 0
 Scalar::Util  = 0
