Do not outdent labels

--- a/.perltidyrc
+++ b/.perltidyrc
@@ -20,3 +20,4 @@
 --stack-closing-tokens           # Stack closing tokens: "} }" instead of "\t}\n}"
 --converge                       # Run until the output stops changing
 --extended-syntax                # For Fennec/Test2 and other Devel::Declare syntax tools
+--no-outdent-labels              # Do not outdent labels
