--- a/dist.ini
+++ b/dist.ini
@@ -23,6 +23,7 @@ perl         = 5.010000
 Test2        = 1.302048
 Test2::Suite = 0.000034
 Importer     = 0.014
+Sub::Info    = 0.002
 Carp         = 0
 Scalar::Util = 0
 Time::HiRes  = 0
