--- a/dist.ini
+++ b/dist.ini
@@ -58,6 +58,8 @@ Test::Pretty                   = <= 0.32
 Test::SharedFork               = <= 0.34
 Test::UseAllModules            = >= 0.12, <= 0.14
 Test::Wrapper                  = <= 0.3.0
+Test2::Tools::EventDumper      = <= 0.000007
+Test2::Harness                 = <= 0.000013
 ; These have tests that will not pass on old versions, but do not break if
 ; already installed, no need to notify.
 ; Test::FITesque
