--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
-old
+*.bak
+*~
+*.old
+*.tar.gz
+Makefile
+blib/
+pm_to_blib
+Build
+_build
+cover_db/
+MYMETA.*
+/Test2-*/
+/.build
+TODO
+t2_lib
+test.pl
+POD_TEMPLATE.POD
+template.POD
+*.html
