--- a/dist.ini
+++ b/dist.ini
@@ -17,6 +17,7 @@ exclude_filename = README
 exclude_filename = README.md
 
 [PodSyntaxTests]
+[RunExtraTests]
 [TestRelease]
 
 [MetaResources]
@@ -29,6 +30,9 @@ perl = 5.008001
 
 [Prereqs / TestRequires]
 Test2::Tools::Tiny = 1.302111
+
+[Prereqs / DevelopRequires]
+Test::Spelling = 0.12   ; for xt/author/pod-spell.t
 
 [MakeMaker]
 [CPANFile]
