Do not include template.pod

--- a/dist.ini
+++ b/dist.ini
@@ -15,6 +15,7 @@ exclude_filename = Makefile.PL
 exclude_filename = cpanfile
 exclude_filename = README
 exclude_filename = README.md
+exclude_filename = template.pod
 
 [PodSyntaxTests]
 [RunExtraTests]
