--- a/dist.ini
+++ b/dist.ini
@@ -36,6 +36,7 @@ Storable      = 0
 
 [Prereqs / DevelopRequires]
 Test::Spelling = 0.12   ; for xt/author/pod-spell.t
+IPC::Open3     = 0      ; for t/Test2/regression/ipc_files_abort_exit.t
 
 [Breaks]
 Log::Dispatch::Config::TestLog = <= 0.02
