--- a/dist.ini
+++ b/dist.ini
@@ -39,6 +39,7 @@ Scope::Guard  = 0
 Time::HiRes   = 0
 overload      = 0
 utf8          = 0
+Data::Dumper  = 0
 Module::Pluggable   = 2.7
 
 [Prereqs / RuntimeSuggests]
