Switch Spec to use the testing_done callback

--- a/dist.ini
+++ b/dist.ini
@@ -27,7 +27,7 @@ repository.type = git
 
 [Prereqs]
 perl          = 5.008001
-Test2         = 1.302127
+Test2::API    = 1.302136
 Importer      = 0.024
 Term::Table   = 0.002
 Sub::Info     = 0.002
